--- a/hackflix/src/App.css
+++ b/hackflix/src/App.css
@@ -22,4 +22,14 @@
 .rating {
   text-align: center;
   margin-top: 10px;
+  margin-bottom: 20px;
+}
+.poster {
+  width: 100%;
+  border-radius: 8px;
+}
+.nombre {
+  text-align: center;
+  margin-top: 10px;
+  margin-bottom: 20px;
 }
