--- a/hackflix/src/App.css
+++ b/hackflix/src/App.css
@@ -84,3 +84,14 @@ body {
 .detalles-peli {
   margin-top: 85px;
 }
+.notfound-container {
+  text-align: center;
+  color: white;
+}
+
+.notfound-image {
+  width: 60%;
+  max-width: 500px;
+  margin-bottom: 20px;
+  margin-top: 0;
+}
